--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="./favicon.ico">
     <title>libotanic</title>
     <link href="./css/app.986e27e5.css" rel="preload" as="style">
     <link href="./js/app.1ac25c00.js" rel="preload" as="script">
