--- a/index.html
+++ b/index.html
@@ -1,21 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" href="/libotanic/favicon.ico">
-    <title>libotanic</title>
-    <link href="/libotanic/css/app.986e27e5.css" rel="preload" as="style">
-    <link href="/libotanic/js/app.d20e3312.js" rel="preload" as="script">
-    <link href="/libotanic/js/chunk-vendors.dff11cb7.js" rel="preload" as="script">
-    <link href="/libotanic/css/app.986e27e5.css" rel="stylesheet">
-</head>
-<body>
-<noscript><strong>We're sorry but libotanic doesn't work properly without JavaScript enabled. Please enable it to
-    continue.</strong></noscript>
-<div id="app"></div>
-<script src="/libotanic/js/chunk-vendors.dff11cb7.js"></script>
-<script src="/libotanic/js/app.d20e3312.js"></script>
-</body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>libotanic</title><script defer="defer" src="/js/chunk-vendors.5520be06.js"></script><script defer="defer" src="/js/app.9b3d6b9e.js"></script><link href="/css/app.3e4e1492.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but libotanic doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
